<resources>
    <string name="app_name">gusa2</string>
    <string name="continuar">CONTINUAR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="atras">ATRÁS</string>
    <string name="salir">SALIR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="cargandoInutil1">PÁGINA DE CARGANDO INÚTIL</string>
    <string name="cargandoInutil2">SI LE DAS AL BOTON SE QUITA</string>
    <string name="cargandoInutil3">SI QUIERES ESPERAR ALLÁ TÚ</string>
    <string name="cargandoInutil4">ALGUIEN TIENE MUCHO TIEMPO</string>
    <string name="cargandoInutil5">EN SERIO, QUE ES INÚTIL</string>
    <string name="cargandoInutil6">EL JUEGO ES MEJOR QUE ESTO</string>
    <string name="cargandoInutil7">CUIDADO!! MIRA A TU DERECHA</string>
    <string name="cargandoInutil8">JAJAJAJ! ERA BROMA</string>
    <string name="cargandoInutil9">lOS JUEGOS GUAIS TIENEN CARGA</string>
    <string name="cargandoInutil10">Y YO TAMBIÉN QUERÍA</string>
    <string name="cargandoInutil11">PUESSS.... ¿CÓMO ESTÁS?</string>
    <string name="cargandoInutil12">ES INÚTIL Y TÚ AÚN AQUÍ</string>
    <string name="actualizando">ACTUALIZANDO</string>
    <string name="cargandoInicial">INSTALACIÓN INICIAL</string>
    <string name="alerta" translatable="false">Alerta</string>
    <string name="alertaMensaje" translatable="false">El consumo de alcohol está prohibido para menores de edad. El consumo de alcohol puede ser perjudicial para la salud. Este juego recuerda el deber de beber con moderación y responsabilidad.\n\Al pulsar continuar acepta ser mayor de edad para consumir alcohol y la responsabilidad de su uso.</string>
    <string name="nuevaPartida">NUEVA PARTIDA</string>
    <string name="opciones">OPCIONES</string>
    <string name="buscarPartida">BUSCAR PARTIDA</string>
    <string name="personalizar">PERSONALIZAR</string>
    <string name="creadorMapas">CREADOR DE MAPAS</string>
    <string name="creadorRetos">CREADOR DE RETOS</string>
    <string name="enSerio">¿EN SERIO?</string>
    <string name="noHayAlcohol">¿Ya no queda alcohol?</string>
    <string name="quedaMas">Aún queda</string>
    <string name="menu">MENÚ</string>
    <string name="musica">Música</string>
    <string name="volumenMusica">Volumen de la música</string>
    <string name="volumenEfectos">Volumen de los efectos</string>
    <string name="juego" translatable="false">JUEGO</string>
    <string name="sonido" translatable="false">SONIDO</string>
    <string name="eligeTuMusica" translatable="false">Elige tu música</string>
    <string name="vasalloActivado" translatable="false">Vasallo activado</string>
    <string name="vasalloDesactivado" translatable="false">Vasallo desactivado</string>
    <string name="descripcionVasallo"><b><big>Vasallo: </big></b>A partir de 5 jugadores otro jugador aleatorio hará el mismo reto que el jugador en turno.</string>
    <string name="puntosIniciales" translatable="false">Puntos iniciales</string>
    <string name="porDefecto" translatable="false">Por defecto (Irá cambiando)</string>
    <string name="momentoRelax" translatable="false">Momento relax de Gusa</string>
    <string name="gusaOnFire" translatable="false">Gusa on fire</string>
    <string name="fiestaConGusa" translatable="false">Fiesta con gusa</string>
    <string name="gusaOriginal" translatable="false">Gusa original  (nostalgia) :-(</string>
    <string name="nombre">NOMBRE</string>
    <string name="descripcion">DESCRIPCIÓN</string>
    <string name="nuevoMapa">NUEVO MAPA</string>
    <string name="borrarMapa">BORRAR MAPA</string>
    <string name="tusMapas">Tus mapas:</string>
    <string name="casillaBeber" translatable="false">Casilla Beber. ¿Quién beberá y cuánto?</string>
    <string name="casillaAleatoria" translatable="false">Casilla Aleatoria. Su nombre lo dice todo.</string>
    <string name="casillaEstrella" translatable="false">Casilla para ganar monedas.</string>
    <string name="casillaBaul" translatable="false">Gasta monedas y consigue premios valiosos.</string>
    <string name="casillaPicante" translatable="false">Casilla con pruebas picantes.</string>
    <string name="casillaPrenda" translatable="false">Si caes en esta casilla pierdes prenda.</string>
    <string name="rellenarCampos">Debes rellenar todos los campos.</string>
    <string name="tusRetos">Tus retos: </string>
    <string name="puntosCasilla">Puntos de la casilla</string>
    <string name="puntosAlCumplirReto">Puntos al cumplir reto</string>
    <string name="siEsCero">Cero entiende que es una prueba sin opciones</string>
    <string name="valorDelBaul">Valor del baúl</string>
    <string name="guardar">GUARDAR</string>
    <string name="nuevoReto">NUEVO RETO</string>
    <string name="texto">Texto</string>
    <string name="picante">PICANTE</string>
    <string name="noPicante">NO PICANTE</string>
    <string name="presencial">PRESENCIAL</string>
    <string name="noPresencial">NO PRESENCIAL</string>
    <string name="borraReto">BORRAR RETO</string>
    <string name="modificar">MODIFICAR</string>
    <string name="deseaBorrar">¿Deséa borrarlo permanéntemente?</string>
    <string name="retoCreado">Reto creado.</string>
    <string name="retoModificado">Reto modificado.</string>
    <string name="nivelAlcohol">Nivel de alcohol</string>
    <string name="nivelPicante">nivel de picante</string>
    <string name="partidaPresencial">PARTIDA PRESENCIAL</string>
    <string name="partidaNoPresencial">PARTIDA NO PRESENCIAL</string>
    <string name="descripcionPresencial"><b><big>Presencial: </big></b>Para jugar en la misma sala. Entran pruebas en las que puede haber contacto.\n
    <b><big>Desde casa: </big></b>Para jugar online. Quita las pruebas que necesiten estar en el mismo sitio.</string>
    <string name="aniadir">AÑADIR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="nombreJugador">Nombre del jugador</string>
    <string name="jugadoresPreparados">Jugadores preparados:</string>
    <string name="tusJugadores">Tus jugadores:</string>
    <string name="modoMultidispositivo">Modo Multidispositivo</string>
    <string name="comenzar">COMENZAR</string>
    <string name="sexo">SEXO</string>
    <string name="gustos">GUSTOS</string>
    <string name="nombreRepetido">Ese nombre ya esta cogido, haber nacido antes.</string>
    <string name="descripcionMultidispositivo"><b><big>Multidispositivo: </big></b>Se conectará mediante bluetooth a otros dispositivos. Estos podrán añadir jugadores a la lista
    de preparados. Ese jugador realizará los turnos desde ese dispositivo.</string>
    <string name="nombreVacio">Ya sabemos que no eres nadie pero tienes que introducir un nombre</string>
    <string name="nombreYaEnPartida">Ese nombre de jugador ya esta en la partida</string>
    <string name="reintentar">reintentar</string>
    <string name="dispisitivosEncontrados">DISPISITIVOS ENCONTRADOS</string>
    <string name="yaBuscando">Ya se esta realizando la búsqueda</string>
    <string name="partidasEncontradas">PARTIDAS ENCONTRADAS</string>
    <string name="permisosNecesasios">Necesitas aceptar los permisos para poder usar la aplicación</string>
    <string name="permisoAceptado">Permiso aceptado</string>
    <string name="activarGps">Búsqueda fallida, compruebe que tiene activada la ubicación gps.</string>
    <string name="sin_bluetooth">Dispositivo sin Bluetooth</string>
    <string name="sin_bluetooth_activado">El dispositivo necesita tener bluetooth para poder usar esta opción</string>
    <string name="nombreMapa1" translatable="false">Casa de Gusa picante</string>
    <string name="descripcion1" translatable="false">¿POR QUÉ COMPLICARSE LA VIDA SI LO QUE QUIERO ES JUGAR? UN TABLERO CON UN POCO DE TODO Y BASTANTE EQUILIBRADO.</string>
    <string name="nombreMapa2" translatable="false">Casa de Gusa</string>
    <string name="descripcion2" translatable="false">COMO \"CASA GUSA PICANTE\" PERO SIN PRUEBAS PICANTES… MÁS ABURRIDO VAMOS. PERO ESO NO EVITARÁ COGERNOS UN BUEN CIEGO. UN TABLERO CON UN POCO DE TODO Y BASTANTE EQUILIBRADO.</string>
    <string name="nombreMapa3" translatable="false">Sin tonterías</string>
    <string name="descripcion3">UN MODO DE JUEGO PARA LOS MÁS VALIENTES… MUCHOS RETOS PICANTES Y MUCHO BEBER.</string>
    <string name="chicosTambien" translatable="false">Pensándolo mejor los chicos también.</string>
    <string name="chicasTambien" translatable="false">Pensándolo mejor las chicas también.</string>
    <string name="tambienBebes" translatable="false">Pensándolo mejor tú también los bebes.</string>
    <string name="tambienTu" translatable="false">Pensándolo mejor tú también lo haces.</string>
    <string name="tambienTodos" translatable="false">Pensándolo mejor lo haréis todos.</string>
    <string name="soloTu" translatable="false">Pensándolo mejor solo tú.</string>
    <string name="etiquetarGusa" translatable="false">Si etiquetas a gusa_juego_para_fiestas mandas beber 6 tragos repartidos como quieras.</string>
    <string name="RetoPrenda" translatable="false">Jejeje. Pierdes una prenda.</string>
    <string name="RetoBeberMuyBajo1_1" translatable="false">Bebe 1 traguito, es la prueba más simple y cursi del juego.</string>
    <string name="RetoBeberMuyBajo1_2" translatable="false">Bebe otro traguito, ya la prueba se va poniendo seria.</string>
    <string name="RetoBeberMuyBajo1_3" translatable="false">Y otros 3 más ¡A la mierda!</string>
    <string name="RetoBeberMuyBajo2" translatable="false">Bebe 2 traguitos. Y ya está, es lo que hay.</string>
    <string name="RetoBeberMuyBajo3_1" translatable="false">Mandas beber 1 trago. Es solo 1 pero cuidado con los amigos rencorosos.</string>
    <string name="RetoBeberMuyBajo3_2_1" translatable="false">Ese amigo manda beber 5 tragos a quien quiera.</string>
    <string name="RetoBeberMuyBajo3_2_2" translatable="false">Ese amigo bebe otros 3, estos ya de mi parte.</string>
    <string name="RetoBeberMuyBajo4" translatable="false">Mandas beber 2 tragos pero a una única persona.</string>
    <string name="RetoBeberMuyBajo5" translatable="false">Bebes 1 trago, mandas beber otro y pierdes 1 punto.</string>
    <string name="RetoBeberMuyBajo6_1" translatable="false">¡¡¡¡GUUUUUUUUSA!!!!\n\Bebe el último en decir Gusa.</string>
    <string name="RetoBeberMuyBajo6_2_1" translatable="false">Otra vez\n\¡¡¡¡GUUUUUUUUSA!!!!\n\Bebe el último en decir Gusa.</string>
    <string name="RetoBeberMuyBajo6_2_2" translatable="false">Otra vez\n\¡¡¡¡GUUUUUUUUSA!!!!\n\Bebe el primero en decir Gusa.</string>
    <string name="RetoBeberMuyBajo7" translatable="false">Bebe 2 tragos.</string>
    <string name="RetoBeberMuyBajo8" translatable="false">Manda beber 2 tragos.</string>
    <string name="RetoBeberMuyBajo9" translatable="false">El que más puntos tiene y tú bebéis 2 tragos. Si eres tú el que más puntos tiene bebes 3.</string>
    <string name="RetoBeberMuyBajo10" translatable="false">Repartes 2 tragos.</string>
    <string name="RetoBeberMuyBajo11" translatable="false">Apuéstate a cara o cruz dos tragos con el jugador que quieras.</string>
    <string name="RetoBeberMuyBajo13" translatable="false">Bebes 2 tragos y pierdes 2 puntos.</string>
    <string name="RetoBeberMuyBajo14" translatable="false">Pierdes 3 puntos pero mandas beber 3 tragos repartidos como elijas.</string>
    <string name="RetoBeberMuyBajo16" translatable="false">Canta algo. Si tus supuestos \"amigos\" deciden que desafinas tendrás que beber 3 tragos para afinar esa voz.</string>
    <string name="RetoBeberMuyBajo17" translatable="false">Mete un hielo en tu espalda o bebe 3 tragos y pierdes 5 puntos.</string>
    <string name="RetoBeberMuyBajo18" translatable="false">El que más puntos tiene bebe 3 tragos. Tú pierdes 3 puntos.</string>
    <string name="RetoBeberMuyBajo19" translatable="false">El que más puntos tiene bebe 2 tragos. Tú pierdes 2 puntos.</string>
</resources>