<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".vistas.OpcionesActivity"
    tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry,Autofill,SpUsage">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/chewy"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btn_atras_opciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/animacion_boton_reducido"
        android:fontFamily="@font/chewy"
        android:paddingLeft="30dp"
        android:text="@string/atras"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        app:layout_constraintWidth_percent="0.15" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lyt_juego_opciones"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674">

        <ImageView
            android:id="@+id/btn_cancionAnterior_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.302"
            app:layout_constraintWidth_percent="0.07"
            app:srcCompat="@drawable/flechaizquierda" />

        <ImageView
            android:id="@+id/btn_cancionSiguiente_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:rotation="180"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.845"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_cancionAnterior_opciones"
            app:layout_constraintWidth_percent="0.07"
            app:srcCompat="@drawable/flechaizquierda" />

        <TextView
            android:id="@+id/text_cancion_opciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chewy"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancionAnterior_opciones"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancionSiguiente_opciones"
            app:layout_constraintStart_toEndOf="@+id/btn_cancionAnterior_opciones"
            app:layout_constraintTop_toTopOf="@+id/btn_cancionAnterior_opciones" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/chewy"
            android:gravity="center_vertical"
            android:text="@string/volumenMusica"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="@+id/btn_cancionAnterior_opciones"
            app:layout_constraintTop_toBottomOf="@+id/btn_cancionAnterior_opciones"
            app:layout_constraintVertical_bias="0.162"
            app:layout_constraintWidth_percent="0.3" />

        <SeekBar
            android:id="@+id/barraMusica_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="50"
            android:progressBackgroundTint="@color/jugador1"
            android:thumbTint="@color/jugador1"
            app:layout_constraintEnd_toEndOf="@+id/btn_cancionSiguiente_opciones"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintWidth_percent="0.35" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/chewy"
            android:gravity="center_vertical"
            android:text="@string/volumenEfectos"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="@+id/btn_cancionAnterior_opciones"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintWidth_percent="0.3" />

        <SeekBar
            android:id="@+id/barraEfectos_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="false"
            android:max="50"

            android:progressBackgroundTint="@color/jugador1"
            android:thumbTint="@color/jugador1"
            app:layout_constraintEnd_toEndOf="@+id/btn_cancionSiguiente_opciones"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintWidth_percent="0.35" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musica"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/text_cancion_opciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/eligeTuMusica" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_juego_opciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/chewy"
            android:gravity="center_vertical"
            android:text="@string/nivelAlcohol"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.354"
            app:layout_constraintWidth_percent="0.25" />

        <ImageView
            android:id="@+id/btn_beberMenos_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintWidth_percent="0.1"
            app:srcCompat="@drawable/flechaizquierda" />

        <ImageView
            android:id="@+id/btn_beberMas_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:rotation="180"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_beberMenos_opciones"
            app:layout_constraintWidth_percent="0.1"
            app:srcCompat="@drawable/flechaizquierda" />

        <ImageView
            android:id="@+id/btn_masPicante_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:rotation="180"
            android:scaleType="fitXY"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="@+id/btn_beberMas_opciones"
            app:layout_constraintTop_toTopOf="@+id/btn_menosPicante_opciones"
            app:layout_constraintWidth_percent="0.1"
            app:srcCompat="@drawable/flechaizquierda" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/chewy"
            android:gravity="center_vertical"
            android:text="@string/nivelPicante"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_vasallo_opciones"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintWidth_percent="0.25" />


        <ImageView
            android:id="@+id/btn_menosPicante_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="@+id/btn_beberMenos_opciones"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintWidth_percent="0.1"
            app:srcCompat="@drawable/flechaizquierda" />

        <Button
            android:id="@+id/btn_vasallo_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/boton_sin_pulsar"
            android:fontFamily="@font/chewy"
            android:paddingLeft="30dp"
            android:text="@string/vasalloActivado"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.13"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955"
            app:layout_constraintWidth_percent="0.3" />

        <ImageView
            android:id="@+id/iv_infoVasallo_opciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/btn_vasallo_opciones"
            app:layout_constraintEnd_toStartOf="@+id/btn_vasallo_opciones"
            app:layout_constraintTop_toTopOf="@+id/btn_vasallo_opciones"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

        <LinearLayout
            android:id="@+id/lyt_nivelBeber_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.115"
            app:layout_constraintBottom_toBottomOf="@+id/btn_beberMenos_opciones"
            app:layout_constraintEnd_toStartOf="@+id/btn_beberMas_opciones"
            app:layout_constraintStart_toEndOf="@+id/btn_beberMenos_opciones"
            app:layout_constraintTop_toTopOf="@+id/btn_beberMenos_opciones">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_nivelPicante_opciones"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintHeight_percent="0.115"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/btn_menosPicante_opciones"
            app:layout_constraintEnd_toStartOf="@+id/btn_masPicante_opciones"
            app:layout_constraintStart_toEndOf="@+id/btn_menosPicante_opciones"
            app:layout_constraintTop_toTopOf="@+id/btn_menosPicante_opciones">

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/btn_juego_opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#DCB769"
        android:fontFamily="@font/chewy"
        android:text="@string/juego"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout15"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sonido_opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#716666"
        android:fontFamily="@font/chewy"
        android:text="@string/sonido"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_info_opciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sinEscoger"
        android:clickable="true"
        android:translationZ="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/tabla"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.7">

            <TextView
                android:id="@+id/text_info_opciones"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/chewy"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>